@@ -57,11 +57,10 @@
             <option value="Special - ()+-×÷*=≠[]{}!?&amp;&quot;'#$/:;\&lt;&gt;@~|%‰°±≤≥∞= 2m² 3m³ ··⋅ –— ¹⁰⁴⁵⁶⁷⁸⁹⁺⁻⁼⁽⁾ ≠≈≡½¼¾№¶">Special glyphs</option>
             <option value="CAD symbols - ℄↔↗↧∠⌀⌒⌓⌖⌭⌯⌰⌳⌲⌴⌵⍵⏊⏤⏥ⒺⒻⓁⓂⓅⓈⓉⓊ□○◎⫽">CAD symbols</option>
             <option value="Kerning is [Ȩȩ], ligatures are [Ȼȼ] (on=working, no=not working).">Kerning and ligatures test</option>
-            <optgroup label="Fully supported languages (40)">
+            <optgroup label="Fully supported languages (39)">
                 <option value="Afrikaans - Sê ek moet sy zebra en xilofoon in bring, want môre gaan dit reën (ÁáÉéÈèÊêËëÍíÎîÏÓóÔôÚúÛûÝý)">Afrikaans</option>
                 <option value="Albanian - Veçori tipologjike të shqipes së sotme standarde (ÇçËë)">Albanian</option>
                 <option value="Azerbaijani - AaBbCcÇçDdEeƏəFfGgĞğHhXxIıİiJjKkQqLlMmNnOoÖöPpRrSsŞşTtUuÜüVvYyYAyaYEyeEeYOyoYUyuZz (ƏəƢƣЬьƵƶӘI̡ı̡ƟɵЗзЈАјаN̡n̡)">Azerbaijani</option>
-                <!-- option value="Belarusian - Я магу есці шкло, яно мне не шкодзіць (АаБбВвГгДдЕеЁёЖжЗзІіЙйКкЛлМмНнОоПпРрСсТтУуЎўФфХхЦцЧчШшЫыЬьЭэЮюЯя’)">Belarusian</option -->
                 <option value="Bosnian - Moja lebdjelica je puna jegulja (ĆćČčĐđŠšŽžÁáÝýİıŞş)">Bosnian</option>
                 <option value="Bulgarian - За миг бях в чужд плюшен скърцащ фотьойл (АаБбВвГгДдЕеЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЬьЮюЯя)">Bulgarian</option>
                 <option value="Catalan - Jove xef, porti whisky amb quinze glaçons d'hidrogen, coi! (ÇçÜüÏïÉéÍíÓóÚúÀàÈèÒò)">Catalan</option>
@@ -78,7 +77,7 @@
                 <option value="Icelandic - Svo hölt, yxna kýr þegði jú um dóp í fé á bæ (ÁáÐðÉéÍíÓóÚúÝýÞþÆæÖö)">Icelandic</option>
                 <option value="Irish - Ċuaiġ bé ṁórsháċ le dlúṫspád fíorḟinn trí hata mo ḋea-ṗorcáin ḃig (ḂḃĊċḊḋḞḟĠġṀṁṖṗṠṡṪṫ)">Irish</option>
                 <option value="Italian - Ma la volpe, col suo balzo, ha raggiunto il quieto Fido (latin)">Italian</option>
-                <option value="Kazakh - Менің әуе негіз кемесi жыланбалықпен толтырылған (АаӘәБбВвГгҒғДдЕеЁёЖжЗзИиЙйКкҚқЛлМмНнҢңОоӨөПпРрСсТтУуҰұҮүФфХхҺһЦцЧчШшЩщЪъЫыІіЬьЭэЮюЯя)">Kazakh</option>
+                <option value="Kazakh - Менің әуе негіз кемесi жыланбалықпен толтырылған (АаӘәБбВвГгҒғДдЕеЖжЗзИиЙйКкҚқЛлМмНнҢңОоӨөПпРрСсТтУуҰұҮүФфХхҺһЦцЧчШшЩщЪъЫыІіЬьЮюЯя)">Kazakh</option>
                 <option value="Kazakh (latin) - no pangram (ÄäĞğÏïÑñÖöÜüÇçŞşʺIıİiʹÉé)">Kazakh (latin)</option>
                 <option value="Latvian - Sarkanās jūrascūciņas peld pa jūru (ĀāČčĒēĢģĪīĶķĻļŅņŠšŪūŽž)">Latvian</option>
                 <option value="Lithuanian - Įlinkdama fechtuotojo špaga sublykčiojusi pragręžė apvalų arbūzą (ĄąČčĘęĖėĮįŠšŲųŪūŽž)">Lithuanian</option>
@@ -87,14 +86,13 @@
                 <option value="Maltese - Jekk jogħġbok ibgħat lili xi pangram (ĊċĠġĦħŻż)">Maltese</option>
                 <option value="Māori - Tēnā koutou, tēnā koutou, tēnā koutou katoa (ĀĒĪŌŪāēīōū)">Māori</option>
                 <option value="Moldovan - Muzicologă în bej, vând whisky și tequila, preț fix (AaĂăÂâBbCcDdEeFfGgHhIiÎîJjKkLlMmNnOoPpQqRrSsȘșTtȚțUuVvWwXxYyZz)">Moldovan (latin)</option>
-                <option value="Moldovan - no pangram (АаБбВвГгДдЕеЖжӁӂЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЫыЬьЭэЮюЯя)">Moldovan (cyrillic)</option>
+                <option value="Moldovan - no pangram (АаБбВвГгДдЕеЖжӁӂЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЫыЬьЮюЯя)">Moldovan (cyrillic)</option>
                 <option value="Montenegrin (latin) - Možte li mi preporučiti neki dobar hotel? (ABCDEFGHIJKLMNOPRSTUVZabcdefghijklmnoprstuvzĆćČčĐđŚśŠšŹźŽž)">Montenegrin (latin)</option>
                 <option value="Montenegrin (cyrillic) - no pangram (ЂЈЉЊЋЏАБВГДЕЖЗИКЛМНОПРСТУФХЦЧШабвгдежзиклмнопрстуфхцчшђјљњћџ)">Montenegrin (cyrillic)</option>
                 <option value="Norwegian - En god stil må først og fremst være klar. Den må være passende. (ÆæØøÅå)">Norwegian</option>
                 <option value="Polish - Pójdźże, kiń tę chmurność w głąb flaszy! (ĄąĆćĘęŁłŃńÓóŚśŹźŻż)">Polish</option>
                 <option value="Portuguese- Luís argüia à Júlia que «brações, zângão» eram do português (ÁáÂâÃãÀàÉéÊêÍíÓóÔôÕõÚúÜü«»)">Portuguese</option>
                 <option value="Romanian - Muzicologă în bej, vând whisky și tequila, preț fix (ĂăÂâÎîŞşȘșŢţȚț)">Romanian</option>
-                <option value="Russian - no pangram (БВГДЕЖИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯбвгдежийклмнопрстуфхцчшщъыэюяё)">Russian</option>
                 <option value="Serbian - Ја могу да једем стакло (АаБбВвГгДдЂђЕеЖжЗзИиЈјКкЛлЉљМмНнЊњОоПпРрСсТтЋћУуФфХхЦцЧчЏџШш)">Serbian</option>
                 <option value="Slovak - Kŕdeľ ďatľov učí koňa žrať kôru (ÁáÄäČčĎďÉéÍíĽľĹĺŇňÓóÔôŔŕŠšŤťÚúÝýŽž)">Slovak</option>
                 <option value="Slovene - Šerif bo za vajo spet kuhal domače žgance (ČčŠšŽž,ĆćĐđÖöÒòÓóÜü)">Slovene</option>
@@ -120,6 +118,10 @@
             <optgroup label="Languages with no support">
                 <option value="Georgian - მინას ვჭამ და არა მტკივა (აბგდევზჱთიკლმნჲოპჟრსტჳუფქღყშჩცძწჭხჴჯჰჵჶჷჸ)">Georgian</option>
                 <option value="Esperanto - Eĥoŝanĝo ĉiuĵaŭde (ĈĉĜĝĤĥĴĵŜŝŬŭ)">Esperanto</option>
+            </optgroup>
+            <optgroup label="Removed languages (sanctions)">
+                <option value="Russian - no pangram (БВГДЕЖИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯбвгдежийклмнопрстуфхцчшщъыэюяё)">Russian</option>
+                <option value="Belarusian - Я магу есці шкло, яно мне не шкодзіць (АаБбВвГгДдЕеЁёЖжЗзІіЙйКкЛлМмНнОоПпРрСсТтУуЎўФфХхЦцЧчШшЫыЬьЭэЮюЯя’)">Belarusian</option>
             </optgroup>
         </select>
         <a href="https://github.com/hikikomori82/osifont">https://github.com/hikikomori82/osifont/</a> (if you see old version of the font, press Ctrl+F5)
