@@ -3,8 +3,8 @@ FontName: osifont
 FullName: osifont
 FamilyName: osifont
 Weight: Book
-Copyright: Created by\nZefram Cochrane,\nhikikomori82@gmail.com,\nwith FontForge 2.0 (http://fontforge.sf.net)\n\nProject hosted on:\nhttp://code.google.com/p/osifont/\n\nDistributed under GNU GPL licence version 3 with GPL font exception:\n\nAs a special exception, if you create a document which uses this font, and embed this font or unaltered portions of this font into the document, this font does not by itself cause the resulting document to be covered by the GNU General Public License. This exception does not however invalidate any other reasons why the document might be covered by the GNU General Public License. If you modify this font, you may extend this exception to your version of the font, but you are not obligated to do so. If you do not wish to do so, delete this exception statement from your version. 
-Version: 0.1.20211207
+Copyright: Created by\nZefram Cochrane,\nhikikomori82@gmail.com,\nwith FontForge 2.0 (http://fontforge.sf.net)\n\nProject hosted on:\nhttps://github.com/hikikomori82/osifont\n\nDistributed under GNU GPL licence version 3 with GPL font exception:\n\nAs a special exception, if you create a document which uses this font, and embed this font or unaltered portions of this font into the document, this font does not by itself cause the resulting document to be covered by the GNU General Public License. This exception does not however invalidate any other reasons why the document might be covered by the GNU General Public License. If you modify this font, you may extend this exception to your version of the font, but you are not obligated to do so. If you do not wish to do so, delete this exception statement from your version. 
+Version: 0.1.20220224
 ItalicAngle: 0
 UnderlinePosition: -534
 UnderlineWidth: 327
@@ -20,7 +20,7 @@ OS2Version: 1
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1212424095
-ModificationTime: 1638872849
+ModificationTime: 1645744225
 PfmFamily: 17
 TTFWeight: 400
 TTFWidth: 5
@@ -91,7 +91,7 @@ NameList: Adobe Glyph List
 DisplaySize: -48
 AntiAlias: 1
 FitToEm: 1
-WinInfo: 25 25 13
+WinInfo: 1000 25 13
 BeginPrivate: 0
 EndPrivate
 GridOrder2: 1
@@ -1185,6 +1185,7 @@ SplineSet
  374.799804688 1251 374.799804688 1251 459.799804688 1387 c 24,45,46
  535.799804688 1510 535.799804688 1510 686.799804688 1510 c 24,23,24
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: one
@@ -1210,6 +1211,7 @@ SplineSet
  344.400390625 1170 344.400390625 1170 373.400390625 1199 c 10,18,-1
  648.400390625 1478 l 2,0,1
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: two
@@ -1244,6 +1246,7 @@ SplineSet
  551.599609375 1365 551.599609375 1365 465.599609375 1201 c 24,34,35
  432.599609375 1139 432.599609375 1139 395.599609375 1139 c 0,0,1
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: three
@@ -1286,6 +1289,7 @@ SplineSet
  296 1369 296 1369 296 1444 c 24,50,51
  296 1515 296 1515 389 1515 c 2,0,1
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: four
@@ -1321,6 +1325,7 @@ SplineSet
  228 396 228 396 242 446 c 26,32,33
  530 1459 l 26,0,1
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: five
@@ -1359,6 +1364,7 @@ SplineSet
  360.400390625 759 360.400390625 759 360.400390625 844 c 26,37,-1
  360.400390625 1434 l 2,0,1
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: six
@@ -1399,6 +1405,7 @@ SplineSet
  465 756 l 1,45,-1
  465 358 l 2,31,32
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: seven
@@ -1427,6 +1434,7 @@ SplineSet
  304.799804688 1510 304.799804688 1510 384.799804688 1510 c 26,24,25
  969.799804688 1510 l 2,0,1
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: eight
@@ -1475,6 +1483,7 @@ SplineSet
  303.599609375 541 l 2,58,59
  303.599609375 704 303.599609375 704 454.599609375 835 c 1,34,35
 EndSplineSet
+Validated: 2049
 EndChar
 
 StartChar: nine
@@ -1515,6 +1524,7 @@ SplineSet
  936.799804688 751 l 25,45,46
  936.799804688 1124 l 2,31,32
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: plus
@@ -2085,6 +2095,7 @@ SplineSet
  891 776 891 776 851 736 c 26,45,-1
  776 661 l 17,0,1
 EndSplineSet
+Validated: 1
 EndChar
 
 StartChar: percent
@@ -14321,36 +14332,13 @@ Flags: MW
 LayerCount: 2
 Fore
 SplineSet
-304.4375 149 m 1,0,-1
- 837.4375 149 l 10,1,2
- 911.4375 149 911.4375 149 911.4375 77 c 280,3,4
- 911.4375 5 911.4375 5 840.4375 5 c 26,5,-1
- 226.4375 5 l 2,6,7
- 160.4375 5 160.4375 5 160.4375 80 c 26,8,-1
- 160.4375 1437 l 2,9,10
- 160.4375 1515 160.4375 1515 249.4375 1515 c 26,11,-1
- 832.4375 1515 l 2,12,13
- 913.4375 1515 913.4375 1515 913.4375 1442 c 24,14,15
- 913.4375 1370 913.4375 1370 832.4375 1370 c 18,16,-1
- 304.4375 1370 l 1,17,-1
- 304.4375 904 l 1,18,-1
- 690.4375 904 l 10,19,20
- 763.4375 904 763.4375 904 763.4375 832 c 0,21,22
- 763.4375 764 763.4375 764 692.4375 764 c 18,23,-1
- 304.4375 764 l 1,24,-1
- 304.4375 149 l 1,0,-1
-694 1745 m 128,-1,26
- 694 1853 694 1853 764 1853 c 0,27,28
- 846 1853 846 1853 846 1739 c 0,29,30
- 846 1637 846 1637 769 1637 c 0,31,25
- 694 1637 694 1637 694 1745 c 128,-1,26
-238 1744 m 128,-1,33
- 238 1851 238 1851 309 1851 c 0,34,35
- 391 1851 391 1851 391 1737 c 0,36,37
- 391 1637 391 1637 314 1637 c 0,38,32
- 238 1637 238 1637 238 1744 c 128,-1,33
+138 1915 m 25,0,-1
+ 912 1921 l 25,1,-1
+ 924 0 l 25,2,-1
+ 120 0 l 25,3,-1
+ 138 1915 l 25,0,-1
 EndSplineSet
-Validated: 2049
+Validated: 1
 EndChar
 
 StartChar: uni0411
@@ -15257,30 +15245,11 @@ VStem: 679 147<235.005 759 900 1277.22>
 LayerCount: 2
 Fore
 SplineSet
-171 1511 m 2,0,-1
- 483 1511 l 2,1,2
- 615 1511 615 1511 720 1402 c 0,3,4
- 826 1292 826 1292 826 1154 c 2,5,-1
- 826 339 l 2,6,7
- 826 211 826 211 721.5 105.5 c 128,-1,8
- 617 0 617 0 459 0 c 2,9,-1
- 162 0 l 2,10,11
- 78 0 78 0 78 76 c 0,12,13
- 78 143 78 143 167 143 c 2,14,-1
- 427 143 l 2,15,16
- 547 143 547 143 618 214 c 1,17,18
- 679 277 679 277 679 389 c 2,19,-1
- 679 759 l 1,20,-1
- 315 759 l 2,21,22
- 233 759 233 759 233 834 c 0,23,24
- 233 900 233 900 317 900 c 2,25,-1
- 679 900 l 1,26,-1
- 679 1178 l 2,27,28
- 679 1244 679 1244 625 1288 c 0,29,30
- 528 1367 528 1367 466 1367 c 2,31,-1
- 171 1367 l 2,32,33
- 79 1367 79 1367 79 1442 c 0,34,35
- 79 1511 79 1511 171 1511 c 2,0,-1
+84 1511 m 29,0,-1
+ 824 1511 l 25,1,-1
+ 829 0 l 25,2,-1
+ 94 0 l 25,3,-1
+ 84 1511 l 29,0,-1
 EndSplineSet
 Validated: 1
 EndChar
@@ -16340,32 +16309,12 @@ VStem: 658 150<236.724 530 673 821.916>
 LayerCount: 2
 Fore
 SplineSet
-442 913 m 2,0,-1
- 144 913 l 2,1,2
- 50 913 50 913 50 989 c 0,3,4
- 50 1060 50 1060 144 1060 c 2,5,-1
- 460 1060 l 2,6,7
- 597 1060 597 1060 706 942 c 0,8,9
- 808 832 808 832 808 697 c 2,10,-1
- 808 342 l 2,11,12
- 808 214 808 214 694 99 c 0,13,14
- 595 0 595 0 436 0 c 2,15,-1
- 135 0 l 2,16,17
- 49 0 49 0 49 75 c 0,18,19
- 49 143 49 143 140 143 c 2,20,-1
- 403 143 l 2,21,22
- 528 143 528 143 596 215 c 0,23,24
- 658 281 658 281 658 392 c 2,25,-1
- 658 530 l 1,26,-1
- 290 530 l 2,27,28
- 206 530 206 530 206 606 c 0,29,30
- 206 673 206 673 291 673 c 2,31,-1
- 658 673 l 1,32,-1
- 658 721 l 2,33,34
- 658 777 658 777 604 833 c 0,35,36
- 527 913 527 913 442 913 c 2,0,-1
+58 1054 m 29,0,-1
+ 808 1054 l 25,1,-1
+ 802 0 l 25,2,-1
+ 52 0 l 25,3,-1
+ 58 1054 l 29,0,-1
 EndSplineSet
-Validated: 1
 EndChar
 
 StartChar: uni044E
@@ -16477,41 +16426,13 @@ Flags: MW
 LayerCount: 2
 Fore
 SplineSet
-248.383789062 604 m 13,0,-1
- 707.383789062 604 l 21,1,2
- 707.383789062 760 707.383789062 760 657.383789062 828 c 4,3,4
- 594.383789062 914 594.383789062 914 483.383789062 914 c 4,5,6
- 377.383789062 914 377.383789062 914 298.383789062 826 c 4,7,8
- 248.383789062 770 248.383789062 770 248.383789062 604 c 13,0,-1
-98.3837890625 698 m 6,9,10
- 98.3837890625 856 98.3837890625 856 229.383789062 966 c 28,11,12
- 343.383789062 1062 343.383789062 1062 480.383789062 1062 c 4,13,14
- 643.383789062 1062 643.383789062 1062 757.383789062 937 c 4,15,16
- 850.383789062 835 850.383789062 835 850.383789062 724 c 6,17,-1
- 850.383789062 534 l 6,18,19
- 850.383789062 462 850.383789062 462 783.383789062 462 c 22,20,-1
- 246.383789062 462 l 29,21,-1
- 246.383789062 330 l 6,22,23
- 246.383789062 146 246.383789062 146 402.383789062 146 c 30,24,-1
- 765.383789062 146 l 30,25,26
- 853.383789062 146 853.383789062 146 853.383789062 72 c 28,27,28
- 853.383789062 0 853.383789062 0 766.383789062 0 c 6,29,-1
- 398.383789062 0 l 6,30,31
- 277.383789062 0 277.383789062 0 185.383789062 97 c 28,32,33
- 98.3837890625 189 98.3837890625 189 98.3837890625 316 c 30,34,-1
- 98.3837890625 698 l 6,9,10
-614 1276 m 128,-1,36
- 614 1384 614 1384 684 1384 c 0,37,38
- 766 1384 766 1384 766 1270 c 0,39,40
- 766 1168 766 1168 689 1168 c 0,41,35
- 614 1168 614 1168 614 1276 c 128,-1,36
-158 1275 m 128,-1,43
- 158 1382 158 1382 229 1382 c 0,44,45
- 311 1382 311 1382 311 1268 c 0,46,47
- 311 1168 311 1168 234 1168 c 0,48,42
- 158 1168 158 1168 158 1275 c 128,-1,43
+42 1478 m 25,0,-1
+ 915 1511 l 25,1,-1
+ 915 0 l 25,2,-1
+ 50 30 l 25,3,-1
+ 42 1478 l 25,0,-1
 EndSplineSet
-Validated: 2049
+Validated: 1
 EndChar
 
 StartChar: uni0454
