@@ -1,3 +1,6 @@
+2022-02-24
+- removed (ЭёЁ), removed Russian support in protest of invasion of Ukraine
+
 2021-12-07
 - fixed kerning in P.*, fixed E, removed Belarusian support
 
